--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -207,3 +207,18 @@ h2 {
   padding: 0px;
   background-color: transparent;
 }
+
+.resp-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.resp-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
